# TraceRecoviz

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  ReadMe.md  all_tests  aspect_common.ah  auto_aspect_logger.ah  auto_class_logger.ah  auto_function_logger.ah  auto_method_logger.ah  compile_commands.json  compile_commands_copy.json  convertLogtoJson.py  index.html  inject_trace_tool.cpp  log_to_gojs_sequence.py  run.sh  test.cpp  test.py  test.sh  test3  test_method_logger.ah  test_method_logger.ah.txt  tool.cpp  trace.cpp  trace.h  trace.log1  trace.log1-1  trace.log10  trace.log2  trace.log3  trace.log4  trace.log5  trace.log6  trace.log7  trace.log8  trace.log9  trace_hooks.cpp  (+3 more)
.github/workflows/: main.yml
analyzer/: extract_info.py
builder/: generate_class_logger.py  generate_function_logger.py  generate_logger.py  generate_method_logger.py  template.py  template_aspect.txt  template_class.txt  template_function.txt  template_method.txt
gtest/: Makefile  aspect_common.ah  logger.ah
instrumented/: prime_tables.h  sample1.cc  sample1_unittest.cc  sample2.cc  sample2.h  sample2_unittest.cc  sample3-inl.h  sample3_unittest.cc  sample4.cc  sample4.h  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc
my_test/: Makefile  main.cpp
src/: sample1.cc  sample3_unittest.cc
src/diff/: config.py  main.py
src/generator/: inject_trace_tool.cpp  trace.cpp
src/parser/: config.py  convertLogtoJson.py  main.py  (+1 more)
tests/: sample1_unittest.cc  sample3_unittest.cc
새 폴더/: trace.cpp  trace_listener.h
(+3 files in other folders)
